--- a/scss/_nav.scss
+++ b/scss/_nav.scss
@@ -1,5 +1,5 @@
 .nav-container {
-	background-image: url('/images/mobile/image-header.jpg');
+	background-image: url('../images/mobile/image-header.jpg');
 	background-size: cover;
 	background-repeat: no-repeat;
 	background-position: center;
@@ -74,7 +74,7 @@
 
 @media (min-width: 48rem) {
 	.nav-container {
-		background-image: url('/images/desktop/image-header.jpg');
+		background-image: url('../images/desktop/image-header.jpg');
 		height: 750px;
 
 		.nav {
